# wasm-bindgen

./: 404.html  Cargo.toml  LICENSE-MIT  index.html  print.html  searchindex.js  searchindex.json
api/: help.html  search-index.js  settings.html  src-files.js
contributing/: index.html  publishing.html  team.html  testing.html
crates/wait-xform/: Cargo.toml
crates/wait-xform/src/: lib.rs
examples/: 2d-canvas.html  add.html  char.html  closures.html  console-log.html  dom.html  fetch.html  hello-world.html  import-js.html  index.html  julia.html  paint.html  performance.html  raytrace.html  request-animation-frame.html  synchronous-instantiation.html  todomvc.html  wasm-audio-worklet.html  wasm-in-wasm.html  wasm-in-web-worker.html  wasm2js.html  weather_report.html  web-audio.html  webgl.html  webrtc_datachannel.html  websockets.html  without-a-bundler.html
reference/: accessing-properties-of-untyped-js-values.html  arbitrary-data-with-serde.html  browser-support.html  cli.html  deployment.html  index.html  iterating-over-js-values.html  js-promises-and-rust-futures.html  js-snippets.html  optimize-size.html  passing-rust-closures-to-js.html  receiving-js-closures-in-rust.html  reference-types.html  rust-targets.html  static-js-objects.html  types.html  weak-references.html  working-with-duck-typed-interfaces.html
src/: closure.rs  externref.rs  lib.rs
wasm-bindgen-test/: asynchronous-tests.html  browsers.html  continuous-integration.html  coverage.html  index.html  usage.html
web-sys/: cargo-features.html  function-overloads.html  index.html  (+4 more)
(+3972 files in other folders)
