[package]
authors = ["The wasm-bindgen Developers"]
description = """
Internal wait transformations for wasm-bindgen
"""
documentation = "https://docs.rs/wasm-bindgen-wait-xform"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-wait-xform"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/wait-xform"
rust-version = "1.76"
version = "0.2.99"

[dependencies]
anyhow = "1.0"
walrus = "0.23"
wasm-bindgen-wasm-conventions = { path = "../wasm-conventions", version = "=0.2.99" }

[dev-dependencies]
rayon = "1.0"
wasmprinter = "0.214"
wast = "214"
wat = "1.0"

[lints]
workspace = true
